implement modal ui for issueDID page

--- a/frontend/src/assets/styles/cards.scss
+++ b/frontend/src/assets/styles/cards.scss
@@ -98,7 +98,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  z-index: 99999;
+  z-index: 9999999;
   overflow: scroll;
   background-color: rgba(0, 0, 0, 0.5);
 }
