--- a/frontend/src/assets/styles/modal.scss
+++ b/frontend/src/assets/styles/modal.scss
@@ -22,7 +22,7 @@
     text-align: center;
     letter-spacing: 0.01em;
 
-    color: $black;
+    color: #fff;
   }
   .swal2-html-container {
     font-weight: 500;
@@ -37,7 +37,7 @@
     min-width: 200px;
     height: 50px;
     padding: 17px 12px;
-    background: #ebebeb !important;
+    background: $black  !important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 100px !important;
     font-weight: 500;
@@ -49,6 +49,6 @@
     text-align: center;
     letter-spacing: 0.1em;
 
-    color: $black !important;
+    color: #fff !important;
   }
 }
